# matrix-centipede

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/: SECURITY.md
.github/workflows/: codeql.yml  html.yml  tests.yml
bench/: bench_log.txt  bench_log_20251007-080107.txt
benchmarks/: benchmark_all.cpp  benchmark_dense_matrix.cpp
include/: dense_matrix.hpp  dense_matrix.tpp  dense_matrix_api.h  dense_matrix_jni.h
java/: build.gradle  settings.gradle
java/src/test/java/dm/: DenseMatrixApiJavaTest.java  DenseMatrixApiTest.java  DenseMatrixJni.java  DenseMatrixJniJavaTest.java  DenseMatrixJniTest.java
java/src/test/kotlin/dm/: DenseMatrixApiKotlinTest.kt  DenseMatrixJniKotlinTest.kt
java/tests/: DenseMatrixApiTest.java
scripts/: bench.slurm  bench_plot.py  brench.sh  cov.sh  java_test.sh
src/: dense_matrix.cpp  dense_matrix_api.cpp  dense_matrix_jni.cpp  main.cpp
tests/: dense_matrix_api_tests.cpp  dense_matrix_double_tests.cpp  dense_matrix_eigen_tests.cpp  dense_matrix_int_tests.cpp  dense_matrix_jni_tests.cpp  dense_matrix_tensor_tests.cpp  dense_matrix_tests.cpp  main.cpp
tests/api/: dense_matrix_api_tests.cpp  dense_matrix_jni_tests.cpp
